--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "boilerplate-gulp-npm",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Boilerplate front-end com GULP, SASS e NPM.",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "watch:sass": "sass --watch src/scss:build/css"
   },
@@ -12,22 +12,31 @@
     "GULP"
   ],
   "author": "Carla Santos",
-  "license": "ISC",
-  "browserslist": "last 10 versions",
+  "license": "MIT",
+  "browserslist": [
+    "last 2 versions",
+    "> 0.2%",
+    "not dead"
+  ],
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "cssnano": "^5.0.11",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "autoprefixer": "^10.4.8",
+    "browser-sync": "^2.27.10",
+    "cssnano": "^5.1.13",
     "gulp": "^4.0.2",
-    "gulp-avif": "^1.0.1",
+    "gulp-avif": "^1.1.1",
+    "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
+    "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
-    "gulp-sass": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-terser-js": "^5.2.2",
+    "gulp-terser": "^2.1.0",
     "gulp-webp": "^4.0.1",
-    "postcss": "^8.4.6",
-    "sass": "^1.49.0"
+    "postcss": "^8.4.16",
+    "sass": "^1.54.9"
   }
 }
